--- a/index.html
+++ b/index.html
@@ -15,5 +15,22 @@
     <link rel="stylesheet" href="css/main.css" />
     <title>Complex Form</title>
   </head>
-  <body></body>
+  <body>
+    <div id="container">
+      <h1 class="logo">Complex Form</h1>
+      <div id="form-box">
+        <i id="prev-btn" class="fas fa-arrow-left"></i>
+        <i id="next-btn" class="fas fa-arrow-right"></i>
+        <div id="input-group">
+          <input id="input-field" required />
+          <label id="input-field">Enter Your First Name</label>
+          <div id="input-progress"></div>
+        </div>
+        <div id="progress-bar"></div>
+      </div>
+    </div>
+
+    <!-- JS -->
+    <script src="js/main.js"></script>
+  </body>
 </html>
