--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
         <i id="prev-btn" class="fas fa-arrow-left"></i>
         <i id="next-btn" class="fas fa-arrow-right"></i>
         <div id="input-group">
-          <input id="input-field" required />
-          <label id="input-field">Enter Your First Name</label>
+          <input id="input-field" required /> <label id="input-field"></label>
           <div id="input-progress"></div>
         </div>
         <div id="progress-bar"></div>
